# obs-web-widgets

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  config.py  local.webendpoint.obs.amll.plist  pyproject.toml  server.py
.github/workflows/: ci.yml
Formula/: obs-web-widgets.rb
src/obs_web_widgets/: __init__.py  autostart.py  cli.py  config.py  countdown.py  lyrics.py  now_playing.py  web.py
src/obs_web_widgets/resources/: __init__.py  now_playing.swift
src/obs_web_widgets/templates/: amll.html  config.html  countdown.html  lyrics.html
templates/: amll_player.html  countdown.html  overlay.html
tests/: test_autostart.py  test_countdown_config.py  test_http.py  test_lyrics.py  test_now_playing.py
